--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body background="https://thumbs.gfycat.com/WeeklyAccomplishedDachshund-size_restricted.gif">
         <center><form action="https://youtu.be/BtLSaxRnIhc">
-            <img src="/bach/imagenes/calacas.jpg" width="300"><br>
+            <img src="https://pbs.twimg.com/media/Fms-YxWXoBgkrrd.jpg" width="300"><br>
             <label for="Interior"><input type="radio" name="Interior-Exterior"><font color="White">Interior</label><br>
             <label for="Exterior"><input type="radio" name="Interior-Exterior"><font color="White">Exterior</label><br>
             <label for="Exterior"><input type="radio" name="Interior-Exterior"><font color="White">Centro</label><br>
